--- a/styles/responsive.css
+++ b/styles/responsive.css
@@ -17,7 +17,7 @@ h3{
 }
 
 .img{
-margin-top: 130%;
+margin-top: 110%;
 margin-left: 25%;
 }
 
@@ -97,8 +97,176 @@ margin-right: 10%;
 }
 
 }
-@media screen and (max-width: 976px){
-{
-/* propriétés pour tablette */
+
+@media screen (min-width: 680px) and (max-width: 1920px){
+/* propriétés pour tablette et pc*/
+
+body{
+  width: 680px;
+  margin: 0;
+  padding: 0;
 }
+
+.img{
+width: 230px;
+height: 50px;
+margin-top: 370px;
+margin-left: 130px;
+opacity: 0.3;
+}
+
+.img1{
+position: relative;
+width: 180px;
+height: 85px;
+left: -8px;
+top:-10px;
+opacity: 0.2;
+}
+
+.barre {
+  position: relative;
+  top:30%;
+  width:100%;
+  height:100px;
+  transform: skew(0deg, 140deg);
+  border-top:3px solid white;
+}
+
+h1{
+color: white;
+font-size: 50px;
+margin-top: 0%;
+position: relative;
+left: 550px;
+font-weight: 300;
+
+
+}
+.titre{
+color: #4EA5AD;
+font-size: 30px;
+margin-top: 55px;
+position: relative;
+left: 560px;
+font-weight: 300;
+}
+
+h3{
+  font-size: 20px;
+  text-align: center;
+  left: 200px;
+  position: relative;
+  top: 110px;
+  color: #163A6D;
+  font-weight: 300;
+}
+
+.presentation{
+  font-size: 16px;
+  text-align: center;
+  left: 40px;
+  position: relative;
+  top: 165px;
+  color: white;
+  font-weight: 400;
+}
+
+.barre2 {
+  position: relative;
+  top:0%;
+  width:10%;
+  height:10px;
+  right: 310px;
+  transform: skew(180deg);
+  border-top:3px solid white;
+}
+
+.barre3 {
+  position: relative;
+  top:28%;
+  width:10%;
+  height:10px;
+  right: 524px;
+  transform: skew(180deg);
+  border-top:3px solid white;
+}
+
+.icon2{
+  position: relative;
+  right: 560px;
+  top:22%;
+  height: 30px;
+  width: 30px;
+  opacity: 0.3;
+}
+
+.barre4 {
+  position: relative;
+  top:70%;
+  width:10%;
+  height:10px;
+  left: 364px;
+  transform: skew(180deg);
+  border-top:3px solid white;
+}
+
+
+.icon1{
+  position: relative;
+  left: 420px;
+  top:63%;
+  height: 50px;
+  width: 50px;
+  opacity: 0.2;
+}
+
+.barre5 {
+  position: relative;
+  top:105%;
+  width:10%;
+  height:10px;
+  left: 92px;
+  transform: skew(180deg);
+  border-top:3px solid white;
+}
+
+.icon3{
+  position: relative;
+  left: 158px;
+  top: 98%;
+  height: 40px;
+  width: 40px;
+  opacity: 0.3;
+}
+
+.icon4{
+  display: none;
+  position: relative;
+  height: 35px;
+  width: 35px;
+  opacity: 0.2;
+}
+
+.bloc1{
+margin-top: 50%;
+height: 50%;
+right: 10%;
+}
+
+.bloc2{
+  height: 50%;
+  right: : 10%;
+}
+
+.bloc3{
+  height: 50%;
+  right: 10%;
+}
+
+.bloc4{
+  height: 50%;
+  right: 10%;
+}
+
 }
